demo/kustomize/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloenv
  labels:
    app: helloenv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "helloenv.stage.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: helloenv
                port:
                  number: 8080
